--- a/Notebook.Rmd
+++ b/Notebook.Rmd
@@ -1,12 +1,15 @@
 ---
 title: "Prediction of Parkinson's Disease"
-author: "Group 2: Kelly Jennings, Marcus Martinez, Changyong Yi, Rachel Tarrant, Stefanos Kapetanakis"
+author: 'Group 2: Kelly Jennings, Marcus Martinez, Changyong Yi, Rachel Tarrant, Stefanos
+  Kapetanakis'
+resource_files:
+- .Renviron
 output:
   html_notebook:
     code_folding: hide
-    toc: true
+    toc: yes
     toc_depth: 4
-    toc_float: true
+    toc_float: yes
 runtime: shiny
 ---
 
@@ -31,84 +34,61 @@ TBD
 ## **Connecting to data.world** 
 ```{r}
 project <- "https://data.world/marcusgabe-ut/parkinsons-data"
-data.world::set_config(cfg_env("DW_API"))
-# df <- data.world::query(
-#   data.world::qry_sql("SELECT * FROM parkinsons"),
-#   dataset = project
-# )
+data.world::set_config(cfg_env("eyJhbGciOiJIUzUxMiJ9.eyJzdWIiOiJwcm9kLXVzZXItY2xpZW50OnRhcnJhbnRybCIsImlzcyI6ImFnZW50OnRhcnJhbnRybDo6MDE1OTQxYzQtNTUyZC00YjI3LWIxNGEtYzllN2ExMjYxN2FiIiwiaWF0IjoxNTA1MzEzMjAyLCJyb2xlIjpbInVzZXJfYXBpX3dyaXRlIiwidXNlcl9hcGlfcmVhZCJdLCJnZW5lcmFsLXB1cnBvc2UiOnRydWV9.vWrAbNkyU0mhgsdXXL-bxESWzppmpm8wguw9uI7pJ64ZsDtovi8kbWbPYS5pPcX8DDnVMuYxJJWHhqdxv--R_w"))
+ df <- data.world::query(
+   data.world::qry_sql("SELECT * FROM parkinsons"),
+   dataset = project
+ )
+```
+
+## **Setup**
+```{r}
+attach(df)
 ```
 
 ## **Introduction** 
 Explanation of data... etc
-
-## LDA
 ```{r}
-#LDA code
+
 ```
 
+## LDA 1
 ```{r}
-#LDA plots?
+# get only continuous variables
+sdf = dplyr::select(df, - status, - name)
+pairs(sdf)
+s = sample(nrow(df), 98)
+s
+lda.fit=lda(status~mdvp_fhi_hz + mdvp_jitter,data=df, subset=s)
+lda.fit
+plot(lda.fit)
+train=df[-s,]
+lda.pred=predict(lda.fit,train)
+pred_df = data.frame(lda.pred)
+#lda plot
+ggplot(pred_df) + geom_histogram(mapping = aes(x=LD1)) + facet_wrap(~ class)
+ggplot(pred_df) + geom_boxplot(mapping = aes(x=class, y=LD1))
+table(lda.pred$class,train$status)
+mean(lda.pred$class==train$status)
+
 ```
+## LDA 2
+```{r}
+# get only continuous variables
+sdf = dplyr::select(df, - status, - name)
+pairs(sdf)
+s = sample(nrow(df), 98)
+s
+lda.fit=lda(status~mdvp_fo_hz + mdvp_jitter,data=df, subset=s)
+lda.fit
+plot(lda.fit)
+train=df[-s,]
+lda.pred=predict(lda.fit,train)
+pred_df = data.frame(lda.pred)
+#lda plot
+ggplot(pred_df) + geom_histogram(mapping = aes(x=LD1)) + facet_wrap(~ class)
+ggplot(pred_df) + geom_boxplot(mapping = aes(x=class, y=LD1))
+table(lda.pred$class,train$status)
+mean(lda.pred$class==train$status)
 
-## Inputs and Outputs
-
-You can embed Shiny inputs and outputs in your document. Outputs are automatically updated whenever inputs change.  This demonstrates how a standard R plot can be made interactive by wrapping it in the Shiny `renderPlot` function. The `selectInput` and `sliderInput` functions create the input widgets used to drive the plot.
-
-```{r eruptions}
-inputPanel(
-  selectInput("n_breaks", label = "Number of bins:",
-              choices = c(10, 20, 35, 50), selected = 20),
-  
-  sliderInput("bw_adjust", label = "Bandwidth adjustment:",
-              min = 0.2, max = 2, value = 1, step = 0.2)
-)
-
-renderPlot({
-  hist(faithful$eruptions, probability = TRUE, breaks = as.numeric(input$n_breaks),
-       xlab = "Duration (minutes)", main = "Geyser eruption duration")
-  
-  dens <- density(faithful$eruptions, adjust = input$bw_adjust)
-  lines(dens, col = "blue")
-})
 ```
-
-## Embedded Application
-
-It's also possible to embed an entire Shiny application within an R Markdown document using the `shinyAppDir` function. This example embeds a Shiny application located in another directory:
-
-```{r tabsets}
-shinyAppDir(
-  system.file("examples/06_tabsets", package = "shiny"),
-  options = list(
-    width = "100%", height = 900
-  )
-)
-```
-
-Note the use of the `height` parameter to determine how much vertical space the embedded application should occupy.
-
-You can also use the `shinyApp` function to define an application inline rather then in an external directory.
-
-In all of R code chunks above the `echo = FALSE` attribute is used. This is to prevent the R code within the chunk from rendering in the document alongside the Shiny components.
-
-## Inputs and Outputs 2
-
-```{r eruptions2}
-inputPanel(
-  selectInput("n_breaks2", label = "Number of bins:",
-              choices = c(10, 20, 35, 50), selected = 20),
-  
-  sliderInput("bw_adjust2", label = "Bandwidth adjustment:",
-              min = 0.2, max = 2, value = 1, step = 0.2)
-)
-
-renderPlot({
-  hist(faithful$eruptions, probability = TRUE, breaks = as.numeric(input$n_breaks2),
-       xlab = "Duration (minutes)", main = "Geyser eruption duration")
-  
-  dens <- density(faithful$eruptions, adjust = input$bw_adjust2)
-  lines(dens, col = "blue")
-})
-```
-
-
