--- a/Notebook.Rmd
+++ b/Notebook.Rmd
@@ -49,29 +49,47 @@ attach(df)
 
 
 ## **Introduction** 
-Explanation of data... etc
+This dataset is composed of a range of biomedical voice measurements from 31 people, 23 with Parkinson's disease (PD). Each column in the table is a particular voice measure, and each row corresponds one of 195 voice recording from these individuals ("name" column). The main aim of the data is to discriminate healthy people from those with PD, according to "status" column which is set to 0 for healthy and 1 for PD.
 
-## LR
+
+Attribute Information:
+
+Matrix column entries (attributes):
+
+name - ASCII subject name and recording number
+
+MDVP:Fo(Hz) - Average vocal fundamental frequency
+
+MDVP:Jitter(%),MDVP:Jitter(Abs),MDVP:RAP,MDVP:PPQ,Jitter:DDP - Several measures of variation in fundamental frequency
+
+MDVP:Shimmer,MDVP:Shimmer(dB),Shimmer:APQ3,Shimmer:APQ5,MDVP:APQ,Shimmer:DDA - Several measures of variation in amplitude
+
+status - Health status of the subject (one) - Parkinson's, (zero) - healthy
+
+
+This document will provide readers four different types of analysis: Logistic Regression, Linear Discriminant Analysis, Quadratic Discriminant Analysis, and K-Nearest Neighbors. 
+
+## Logistic Regression
 ```{r}
 df2 = df %>% dplyr::mutate(status2 = ifelse(status == "true", 1, 0))
-#View(df2)
 training2 = sample(nrow(df2), 97)
 testing2 = df2[-training2,]
-#View(testing2)
+
 glm.fit=glm(status2~mdvp_fo_hz+mdvp_jitter,
             data=df2,family=binomial,
             subset=training2)
 summary(glm.fit)
+
 glm.probs=predict(glm.fit,newdata=testing2,type="response")
-#glm.probs[1:5]
 glm.pred=ifelse(glm.probs>0.5,"1","0")
 status2.testing = testing2$status2
+
 table(glm.pred,status2.testing)
 mean(glm.pred==status2.testing)
 ```
 
 
-## LDA
+## Linear Discriminant Analysis
 ```{r}
 training = sample(nrow(df), 97)
 testing = df[-training,]
@@ -84,14 +102,8 @@ lda_df = data.frame(lda.pred)
 
 table(lda.pred$class,testing$status)
 table(lda.pred$class==testing$status)
-mean(lda.pred$class==testing$status)
 table(lda.pred$class!=testing$status)
-
-#df1 = dplyr::bind_cols(testing,lda_df)
-#View(df1)
-#df1 %>% dplyr::filter(status == class) %>% group_by(status) %>% summarise(n())
-#df1 %>% dplyr::filter(status != class) %>% group_by(status) %>% summarise(n())
-#df1 %>% dplyr::group_by(class) %>% dplyr::summarise(min(posterior.false), max(posterior.true), n())
+mean(lda.pred$class==testing$status) 
 ```
 
 ```{r}
@@ -101,32 +113,36 @@ renderPlot({ggplot(lda_df) + geom_histogram(mapping=aes(x=LD1))})
 renderPlot({ggplot(lda_df) + geom_boxplot(mapping = aes(x=class,y=LD1))})
 ```
 
-## QDA
+## Quadratic Discriminant Analysis
 
 ```{r}
 qda.fit = qda(status~mdvp_fo_hz+mdvp_jitter,data=df,subset=training)
 qda.fit
+
 testing <- dplyr::sample_n(df,98)
 qda.pred = predict(qda.fit, testing)
+
 table(qda.pred$class,testing$status)
 table(qda.pred$class==testing$status)
 table(qda.pred$class!=testing$status)
 mean(qda.pred$class==testing$status)
 ```
 
-## KNN
+## K-Nearest Neighbors
 
 ```{r}
-#??knn
 predictors=cbind(mdvp_fo_hz,mdvp_jitter)
 testing_knn = sample(nrow(testing), 97)
-knn.pred=class::knn(predictors[training, ],predictors[testing_knn,],status[training],k=1) # dimensions differ
+
+knn.pred=class::knn(predictors[training, ],predictors[testing_knn,],status[training],k=1)
+
 table(knn.pred,status[testing_knn])
 mean(knn.pred==status[testing_knn])
 
 ```
 
-## Comparison of the mean correct predictions
+## Comparison of the Mean Correct Predictions
+
 
 ```{r}
 # Comparison of the mean correct predictions
